--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple JavaScript-based web browser game",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"No tests specified\""
+    "test": "echo \"No tests specified\"",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
